--- a/Home/templates/index.html
+++ b/Home/templates/index.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+
+{%block title%} Home {%endblock%}
+
+{%block css%}  {%endblock%}
 {% block body %}
-<h1>hello world</h1>
+
 {% endblock %}
