--- a/Home/templates/index.html
+++ b/Home/templates/index.html
@@ -1,117 +1,72 @@
 {% extends "base.html" %}
-
+{% load static %}
 {%block title%} Home {%endblock%}
 
-{%block css%}
+
+{% block css %}
+
 <style>
-    .todolist-form {
-        background-color: #ffffff;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        width: 100%;
-        top: 5px;
-    }
+    .container {
+    width: 40%;
+    border: 1.5px solid white;
+    box-shadow: 0px 0px 15px rgba(108, 134, 247, 1);
+    border-radius: 25px;
+    padding: 20px;
+    position: relative;
+    background: rgba(255, 255, 255, 0.8);
+}
 
-    .todolist-form .overlap-group-wrapper {
-        background-color: #ffffff;
-        width: 1320px;
-        height: 784px;
-    }
+.bg-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('{% static "bg.png" %}');
+    background-size: cover;
+    background-position: center;
+    border-radius: 25px;
+    opacity: 0.6;
+    z-index: -1;
+}
 
-    .todolist-form .overlap-group {
-        position: relative;
-        height: 708px;
-    }
+.container h1 {
+    color: #273057;
+    font-size: 60px;
+    font-weight: 900;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
 
-    .todolist-form .color {
-        position: absolute;
-        width: 1320px;
-        height: 184px;
-        top: 0;
-        left: 0;
-        background-color: #32fc52;
-        border-radius: 25px 25px 0px 0px;
-    }
+.container .mb-3 {
+    font-size: 25px;
+    font-weight: bold;
+    color: #273057;
+    padding-bottom: 10px;
+}
 
-    .todolist-form .text-wrapper {
-        position: absolute;
-        top: 5px;
-        left: 481px;
-        text-shadow: 0px 4px 10px #00000040;
-        font-family: "Caveat-Bold", Helvetica;
-        font-weight: 700;
-        color: #000000;
-        font-size: 100px;
-        letter-spacing: 0;
-        line-height: normal;
-    }
+.container .mb-3 .form-control {
+    border: 1.2px solid rgb(255, 255, 255);
+    font-family: 'Courier New', Courier, monospace;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    color: black;
+}
 
-    .todolist-form .main {
-        position: absolute;
-        width: 1252px;
-        height: 576px;
-        top: 132px;
-        left: 34px;
-        background-color: #ffffff;
-        border-radius: 25px;
-        overflow: hidden;
-        box-shadow: 0px 4px 50px #00000040;
-    }
-
-    .todolist-form .div {
-        position: absolute;
-        top: 249px;
-        left: 319px;
-        font-family: "Caveat-Bold", Helvetica;
-        font-weight: 700;
-        color: #666666;
-        font-size: 60px;
-        letter-spacing: 0;
-        line-height: normal;
-    }
-
-    .todolist-form .btn {
-        all: unset;
-        box-sizing: border-box;
-        position: absolute;
-        width: 420px;
-        height: 65px;
-        top: 493px;
-        left: 416px;
-        background-color: #32fc52;
-        border-radius: 50px;
-        overflow: hidden;
-        box-shadow: 0px 4px 10px #00000040;
-    }
-
-    .todolist-form .text-wrapper-2 {
-        position: absolute;
-        top: 1px;
-        left: 125px;
-        font-family: "Caveat-Bold", Helvetica;
-        font-weight: 700;
-        color: #ffffff;
-        font-size: 50px;
-        letter-spacing: 0;
-        line-height: normal;
-    }
 </style>
-{%endblock%}
+{% endblock %}
 
 {% block body %}
-<div class="todolist-form">
-    <div class="overlap-group-wrapper">
-        <div class="overlap-group">
-            <div class="color"></div>
-            <div class="text-wrapper">To-Do List</div>
-            <div class="main">
-                <p class="div">Its empty add some to the list</p>
-                <button class="btn">
-                    <div class="text-wrapper-2">Add tasks</div>
-                </button>
-            </div>
-        </div>
+<div class="container my-5">
+    <img src="{% static 'bg.png' %}" class="bg-image">
+    <h1 class="text-center">Todo-List</h1>
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Task Name</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Task-1">
+    </div>
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Add the Description</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="This is the Description"></textarea>
     </div>
 </div>
+
 {% endblock %}
