--- a/templates/base.html
+++ b/templates/base.html
@@ -25,20 +25,25 @@
     font-family: 'Caveat';
     }
     .navbar{
-        background-color: #414242;
+        background-color: #375af693;
         position: sticky;
         top: 0;
-        height: 75px;
+        height: 60px;
         display: flex;
         align-items: center;
         z-index: 100;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 
     }
-
-     .navbar-nav li {
-        margin-right: 30px;
-        font-size: 2.5rex ;
+    .navbar .navbar-brand{
+        font-size: 45px;
+        color: #000000;
+        padding-left: 10px;
+        padding-right: 60px;
+        letter-spacing: 0.1em;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     }
+
     footer {
         background-color: #333;
         color: #fff;
@@ -91,24 +96,13 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="index.php" style="font-size: 50px; color: #fff; padding-left: 10px; padding-right: 60px;"><b>Justdo-It</b></a>
+        <a class="navbar-brand" href="/"><b>Justdo-It</b></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a style="color: #fff;" class="nav-link" >Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a style="color: #fff;" class="nav-link" >Add Task</a>
-                </li>
-                <li class="nav-item">
-                    <a style="color: #fff;" class="nav-link" >Settings</a>
-                </li>
-            </ul>
         </div>
     </nav>
 
