--- a/templates/base.html
+++ b/templates/base.html
@@ -12,34 +12,48 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-        <link href='https://fonts.googleapis.com/css?family=Caveat' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Caveat' rel='stylesheet'>
     <title>{% block title %} {% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FgcDDbSiBsAOKAN6X3u5vV35VqSlg6tIgJ1DZU5MqWvJrlO/j1AAldzqPiIF"
+        crossorigin="anonymous"></script>
+
 </head>
 
 
 <style>
     body {
-    font-family: 'Caveat';
+        font-family: 'Caveat';
     }
-    .navbar{
-        background-color: #375af693;
+
+    .navbar {
+        background-color: #5c78f6;
         position: sticky;
         top: 0;
-        height: 60px;
+        height: 70px;
         display: flex;
         align-items: center;
         z-index: 100;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+        border-radius: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
     }
-    .navbar .navbar-brand{
-        font-size: 45px;
-        color: #000000;
+
+
+    .navbar .navbar-brand {
+        font-size: 50px;
+        color: #ffffff;
         padding-left: 10px;
-        padding-right: 60px;
+        padding-right: 80px;
+        margin-right: 80px;
         letter-spacing: 0.1em;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     }
@@ -95,15 +109,8 @@
 {% endblock %}
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="/"><b>Justdo-It</b></a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        </div>
+    <nav class="navbar navbar-expand-lg ">
+        <a class="navbar-brand mx-5" href="/"><b>Justdo-It</b></a>
     </nav>
 
     <!-- navbar end  -->
@@ -155,4 +162,3 @@
 </body>
 
 </html>
-
