--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,19 @@
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     }
 
+    .navbar-toggler-icon {
+    background-color: #000;
+    }
+
+
+    .navbar-nav .nav-link {
+        color: #ffffff;
+        font-weight: bold;
+        font-size: 25px;
+        margin-right: 80px;
+
+    }
+
     footer {
         background-color: #333;
         color: #fff;
@@ -94,7 +107,6 @@
 
     .footer-contact {
         max-width: 300px;
-        /* Adjust based on your content */
     }
 
     .footer-bottom {
@@ -109,9 +121,24 @@
 {% endblock %}
 
 <body>
-    <nav class="navbar navbar-expand-lg ">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
+            aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <a class="navbar-brand mx-5" href="/"><b>Justdo-It</b></a>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item justify-content-center">
+                    <a class="nav-link justify-content-center" href="#" style="color: #fff;">Tasks</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link justify-content-center" href="#" style="color: #fff;">User</a>
+                </li>
+            </ul>
+        </div>
     </nav>
+
 
     <!-- navbar end  -->
     {% block body %} {% endblock %}<br>
