--- a/Home/templates/index.html
+++ b/Home/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {%block title%} Home {%endblock%}
-{% block css %}
+{%block css %}
 <style>
   .btn-primary {
     background-color: #1e2c3a;
@@ -76,7 +76,7 @@
 </style>
 {% endblock %}
 {% block body %}
-
+<!-- add task form start  -->
 <form action="/" method="post">
   {% csrf_token %}
   <div class="container my-3">
@@ -109,6 +109,7 @@
         </div>
       </div>
     </div>
+    <!-- add task form end  -->
 
     <!-- pop- up Btn for add task  -->
     <div class="d-flex justify-content-center mt-5">
@@ -116,14 +117,57 @@
         + Add Task
       </button>
     </div>
+    <!-- pop- up Btn for add task end  -->
   </div>
 </form>
+
+<!-- task section  -->
+{% if tasks %}
+<div class="containers mx-5 my-3 d-flex justify-content-center align-items-center"
+  style="background-color: #bfc8f2; height: 400px; border-radius: 25px">
+  <table class="table table-borderless " style="
+      width: 90%;
+      height: 100px;
+      font-size: 25px;
+      box-shadow: 0px 0px 80px rgb(139, 157, 239);
+      border-radius: 20px;
+
+
+    ">
+    <thead style="font-size: 28px">
+      <tr>
+        <thead>
+          <th colspan="4" class="text-center" style="font-size: 35px;  color:#273057">You'r Todo-List</th>
+        </thead>
+      </tr>
+      <tr>
+        <th scope="col" style="width: 5%">No.</th>
+        <th scope="col" style="width: 20%">Task</th>
+        <th scope="col" style="width: 45%">Details</th>
+        <th scope="col" style="width: 30%">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for task in tasks %}
+      <tr>
+        <th scope="row">{{forloop.counter}}</th>
+        <td style="font-weight: bold; text-transform: capitalize; color:#273057 ;">{{task.tasktitle}}</td>
+        <td>{{task.taskdesc}}</td>
+        <td>@mdo</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
+{% else %}
 <div class="containers mx-5 d-flex justify-content-center align-items-center"
-  style="background-color: #bfc8f2; height: 350px; border-radius: 25px">
+  style="background-color: #f2bfbf; height: 350px; border-radius: 25px">
   <h1 class="text-center" style="font-size: 60px">There is no Task yet</h1>
 </div>
+{% endif %}
+
+<!-- task section end  -->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-FgcDDbSiBsAOKAN6X3u5vV35VqSlg6tIgJ1DZU5MqWvJrlO/j1AAldzqPiIF" crossorigin="anonymous"></script>
-
 {% endblock %}
