--- a/Home/templates/index.html
+++ b/Home/templates/index.html
@@ -73,6 +73,11 @@
     border-radius: 10px;
     color: black;
   }
+  .form-check-input:checked,
+  .form-check-input:not(:checked) {
+
+    border: 2px solid black;
+  }
 </style>
 {% endblock %}
 {% block body %}
@@ -123,42 +128,45 @@
 
 <!-- task section  -->
 {% if tasks %}
-<div class="containers mx-5 my-3 d-flex justify-content-center align-items-center"
-  style="background-color: #bfc8f2; height: 400px; border-radius: 25px">
-  <table class="table table-borderless " style="
-      width: 90%;
-      height: 100px;
-      font-size: 25px;
-      box-shadow: 0px 0px 80px rgb(139, 157, 239);
-      border-radius: 20px;
-
-
-    ">
+<div class="containers mx-5 my-3 d-flex flex-column justify-content-center align-items-center"
+  style="background-color: #f7f7f8; border-radius: 25px; overflow-y: auto;">
+  <table class="table table-borderless"
+    style="width: 90%; font-size: 25px; box-shadow: 0px 0px 80px rgb(139, 157, 239); border-radius: 20px; margin-top: 15px;">
     <thead style="font-size: 28px">
       <tr>
-        <thead>
-          <th colspan="4" class="text-center" style="font-size: 35px;  color:#273057">You'r Todo-List</th>
-        </thead>
+        <th colspan="4" class="text-center"
+          style="font-size: 40px; background-color: #5c78f6; color: white; border-radius: 20px; border-bottom-left-radius:0 ; border-bottom-right-radius:0 ;">
+          Your Todo-List</th>
       </tr>
       <tr>
-        <th scope="col" style="width: 5%">No.</th>
+        <th scope="col" style="width: 10%">No.</th>
         <th scope="col" style="width: 20%">Task</th>
-        <th scope="col" style="width: 45%">Details</th>
-        <th scope="col" style="width: 30%">Action</th>
+        <th scope="col" style="width: 40%">Details</th>
+        <th scope="col" style="width: 30%" >Action</th>
       </tr>
     </thead>
     <tbody>
       {% for task in tasks %}
       <tr>
-        <th scope="row">{{forloop.counter}}</th>
-        <td style="font-weight: bold; text-transform: capitalize; color:#273057 ;">{{task.tasktitle}}</td>
-        <td>{{task.taskdesc}}</td>
-        <td>@mdo</td>
+        <th scope="row">{{ forloop.counter }}</th>
+        <td style="font-weight: bold; text-transform: capitalize; color: #273057;">{{ task.tasktitle }}</td>
+        <td>{{ task.taskdesc }}</td>
+        <td class="d-flex align-items-center justify-content-between mx-5">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="flexCheckDefault">
+          </div>
+          <div>
+            <i class="fas fa-ellipsis-v me-4 fs-5"></i>
+            <i class="fas fa-trash fs-5"></i>
+          </div>
+        </td>
+
       </tr>
       {% endfor %}
     </tbody>
   </table>
 </div>
+
 {% else %}
 <div class="containers mx-5 d-flex justify-content-center align-items-center"
   style="background-color: #f2bfbf; height: 350px; border-radius: 25px">
@@ -167,7 +175,11 @@
 {% endif %}
 
 <!-- task section end  -->
-
+<script>
+  document.querySelector('form').addEventListener('submit', function () {
+    window.location.reload();
+  });
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-FgcDDbSiBsAOKAN6X3u5vV35VqSlg6tIgJ1DZU5MqWvJrlO/j1AAldzqPiIF" crossorigin="anonymous"></script>
 {% endblock %}
