--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,12 @@
 
 </head>
 
-
+{% load static %}
 <style>
     body {
         font-family: 'Caveat';
+        background-image: url("{% static 'bgg.jpg'%}") ;
+
     }
 
     .navbar {
@@ -75,6 +77,7 @@
         background-color: #333;
         color: #fff;
         padding: 20px 0;
+
     }
 
     .footer-content {
@@ -82,6 +85,8 @@
         justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
+        margin-right: 80px;
+        margin-left: 80px;
     }
 
     .footer-logo img {
@@ -98,6 +103,7 @@
     .footer-links li {
         display: inline-block;
         margin-right: 20px;
+        font-size: 20px;
     }
 
     .footer-links a {
@@ -150,13 +156,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">User</a>
+                <a class="nav-link" href="/user">User</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Settings</a>
+                <a class="nav-link" href="/task">Tasks</a>
               </li>
             </ul>
           </div>
@@ -180,15 +186,16 @@
                 <!-- Navigation links or important links -->
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#about">Tasks</a></li>
+                    <li><a href="#user">Home</a></li>
+                    <li><a href="#task">Tasks</a></li>
                 </ul>
             </div>
 
             <div class="footer-contact">
                 <!-- Contact information -->
-                <p>Contact us: info@example.com</p>
-                <p>123 Main Street, Cityville</p>
-                <p>Phone: (555) 123-4567</p>
+                <p>Contact us: Baruwal20@gmail.com</p>
+                <p>Itahari, Nepal</p>
+                <p>Phone: 9815321156 </p>
             </div>
         </div>
 
