--- a/Home/templates/task.html
+++ b/Home/templates/task.html
@@ -1,4 +1,37 @@
 {% extends "base.html" %}
 {% block title %} Task {% endblock %}
 {% block css %}  {% endblock %}
-{% block body %} <h1> this is Task panel </h1> {% endblock %}
+{% block body %}
+<div class="containers mx-5 my-3 d-flex flex-column justify-content-center align-items-center"
+  style="background-color: #b3fdac; border-radius: 25px; overflow-y: auto;">
+  <table class="table"
+  style="width: 90%; font-size: 25px; box-shadow: 0px 0px 80px rgb(139, 157, 239); border-radius: 20px; margin-top: 15px;">
+  <thead style="font-size: 28px">
+  <tr>
+    <th colspan="4" class="text-center"
+      style="font-size: 40px; background-color: #5c78f6; color: white; border-radius: 20px; border-bottom-left-radius:0 ; border-bottom-right-radius:0 ;">
+      Completed Todo-List</th>
+  </tr>
+  <tr>
+    <th scope="col" style="width: 20%">No.</th>
+    <th scope="col" style="width: 35%">Task</th>
+    <th scope="col" style="width: 40%">Details</th>
+    <th scope="col" style="width: 5%" >Action</th>
+</tr>
+</thead>
+<tbody>
+    <tr>
+        <th scope="row">1</th>
+        <td style="font-weight: bold; text-transform: capitalize; color: #273057;">2</td>
+    <td>3</td>
+    <td class="d-flex align-items-center justify-content-between mx-5">
+        <i class="fas fa-check me-4 fs-5"></i>
+        <i class="fas fa-trash fs-5"></i>
+    </div>
+    </td>
+
+  </tr>
+</tbody>
+</table>
+</div>
+{% endblock %}
