--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,9 @@
         background-image: url("{% static 'bgg.jpg'%}") ;
 
     }
-
+    .content {
+            flex: 1;
+        }
     .navbar {
         background-color: #5c78f6;
         position: sticky;
@@ -76,7 +78,10 @@
     footer {
         background-color: #333;
         color: #fff;
-        padding: 20px 0;
+        padding: 55px 0;
+        text-align: center;
+        height: 300px;
+
 
     }
 
